AM_CXXFLAGS = -O3 -DNDEBUG

TESTS = benchmark-driver.sh
noinst_PROGRAMS = insert_throughput.out read_throughput.out \
	read_insert_throughput.out insert_benchmark.out \
	read_benchmark.out read_insert_benchmark.out
insert_throughput_out_SOURCES = insert_throughput.cc
read_throughput_out_SOURCES = read_throughput.cc
read_insert_throughput_out_SOURCES = read_insert_throughput.cc
insert_benchmark_out_SOURCES = insert.cc
read_benchmark_out_SOURCES = read.cc
read_insert_benchmark_out_SOURCES = read_insert.cc
